[package]
name = "blockconvert"
description = "Import multiple domain filterlist types and determine whether to block a domain"
version = "0.5.2"
authors = ["Alex Williams <mkb2191@protonmail.com>"]
edition = "2018"
repository = "https://github.com/mkb2091/blockconvert_crate"
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = {version = "1.4", features = ["std", "perf"]}
ipnet = "2.3"
parking_lot = "0.11"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"